--- a/angular.json
+++ b/angular.json
@@ -30,19 +30,20 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
-            "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css",
-              "node_modules/primeng/resources/themes/saga-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css",
-              "src/styles.css"
-            ],
+           "assets": [
+  {
+    "glob": "**/*",
+    "input": "public",
+    "output": "/"
+  }
+],
+           "styles": [
+  "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+  "node_modules/primeng/resources/themes/saga-blue/theme.css",
+  "node_modules/primeng/resources/primeng.min.css",
+  "node_modules/primeicons/primeicons.css",
+  "src/styles.css"
+],
             "scripts": []
           },
           "configurations": {
